<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"    
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.signpress.DetailActivity" >
 
    
    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
    <EditText
         android:id="@+id/tvCWJ"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:hint="@string/Remark"
         android:maxLines="15"
         android:scrollbars="vertical"
         android:singleLine="false"
         android:textColor="#FF0000"
         android:textSize="15sp"
         android:inputType="textMultiLine"
          />
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvCWJ"     
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="15dp" >

         <Button
             android:id="@+id/btnAgree"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:background="@drawable/chat_send_button_bg"
             android:gravity="center"
             android:text="@string/Agree"
             android:textSize="20sp" />

         <Button
             android:id="@+id/btnRefuse"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
             android:background="@drawable/chat_send_button_bg"
             android:gravity="center"
             android:text="@string/Refuse"
             android:textSize="20sp" />

     </LinearLayout>
</RelativeLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottomLayout"
        >
    <ListView
        android:id="@+id/ContractDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </FrameLayout>
</RelativeLayout>
