<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.signpress.LoginActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo1" />
    
     <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/login_input"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/usernamelogo"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/userlogo"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
                            
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:hint="@string/username"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingLeft="20dp" 
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/divider_horizontal_line" />
		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
          
		<ImageView
                android:id="@+id/passwordlogo"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/pwdlogo"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
		    
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingLeft="20dp" 
            android:paddingRight="0dp"
            android:paddingEnd="0dp" 
            />
        </LinearLayout>
    </LinearLayout>

     <Button
         android:id="@+id/buton1"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="106dp"
         android:background="@drawable/chat_send_button_bg"
         android:gravity="center"
         android:paddingTop="5.0dip"
         android:text="@string/login"
         android:textSize="20sp" />

</RelativeLayout>